@@ -41,6 +41,8 @@ $sql .= " ORDER BY (user_id <> " . $auth["id"] . "), user_id, time";
 
 foreach($db->query($sql) as $DATA)
 {
+  if(isGrantExpired($DATA)) continue;
+
   $our = ($DATA["user_id"] == $auth["id"]);
   $class = ($our? "fileinfo": "fileinfo alien");
   echo "<li class=\"$class\">";
