@@ -1,3 +1,9 @@
+dl 0.6: 
+------------------
+
+* Allow to tune the DB expiration process with $gcProbability and $gcLimit.
+
+
 dl 0.5: 09/02/2010
 ------------------
 
